test/compare/testdata/errors/bad_for.go
// errorcheck

package main

func main() {
	for i := range []int{} { } // ERROR "i declared but not used"
}
